# Hachnarock2026

./: .gitignore
base/: CMakeLists.txt  prj.conf  test.py  yolo.py
base/boards/: nrf54l15dk.overlay
base/ei/: CMakeLists.txt  README.md  west.yml
base/ei/model-parameters/: model_metadata.h  model_variables.h
base/ei/tflite-model/: check_version.cpp  tflite_learn_966504_4_compiled.cpp  tflite_learn_966504_4_compiled.h
base/ei/zephyr/: module.yml
base/src/: config.h  frame_assembler.c  frame_assembler.h  gpio_output.c  gpio_output.h  main.c  main.cpp  ring_buffer.c  ring_buffer.h  state_machine.c  state_machine.h  usb_dma.c  usb_dma.h  yolo.c  yolo.h
model_dataset/: class-descriptions.csv
model_dataset/testing/: _annotations.csv
model_dataset/training/: _annotations.csv
object_overlays/labels/: 584126743_1276132124649427_568969889666505086_n_overlay1.png.txt  IMG_8476_overlay1.png.txt  IMG_8476_overlay2.png.txt  (+129 more)
raw_photos/: IMG_8476.HEIC  IMG_8477.HEIC  IMG_8479.HEIC  IMG_8480.HEIC  IMG_8481.HEIC  IMG_8482.HEIC  IMG_8483.HEIC  IMG_8484.HEIC  IMG_8485.HEIC  IMG_8486.HEIC  IMG_8487.HEIC  IMG_8488.HEIC  IMG_8489.HEIC  IMG_8490.HEIC  IMG_8491.HEIC  IMG_8492.HEIC  IMG_8495.HEIC  IMG_8496.HEIC  IMG_8497.HEIC  IMG_8498.HEIC  IMG_8499.HEIC  IMG_8500.HEIC  IMG_8501.HEIC  IMG_8504.HEIC  IMG_8505.HEIC  IMG_8506.HEIC  IMG_8507.HEIC  IMG_8508.HEIC  IMG_8510.HEIC  IMG_8511.HEIC  IMG_8513.HEIC
yolo/: adjust_rocket_size.py  args.py  bbox_test.py  delete_wrong_shape.py  generate_dataset.py  live_yolo.py  overlay_image_and_get_yolo_labels.py  train.py  yaml_file.py
(+74 files in other folders)
